Add server side Sentry reporting (express middleware).

--- a/config.env.example
+++ b/config.env.example
@@ -47,3 +47,8 @@ AWS_BATCH_QUEUE=
 AWS_BATCH_COMPUTE_ENVIRONMENT=
 
 GOOGLE_TRACKING_ID=
+
+# both ----------------------------------------------------------------------------------------
+
+SENTRY_DSN=
+ENVIRONMENT=
