--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "cron": "^1.1.0",
     "express": "^4.13.3",
     "express-fileupload": "^0.1.4",
+    "git-rev-sync": "^1.9.1",
     "ioredis": "^3.1.1",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
