--- a/config.env.example
+++ b/config.env.example
@@ -6,12 +6,12 @@
 SCITRAN_RUNTIME_PORT=8112
 SCITRAN_CORE_DRONE_SECRET=
 SCITRAN_PERSISTENT_DB_URI=mongodb://mongo:27017/scitran
-SCITRAN_AUTH_AUTH_ENDPOINT=https://accounts.google.com/o/oauth2/auth
-SCITRAN_AUTH_CLIENT_ID=
-SCITRAN_AUTH_ID_ENDPOINT=https://www.googleapis.com/plus/v1/people/me/openIdConnect
-SCITRAN_AUTH_VERIFY_ENDPOINT=https://www.googleapis.com/oauth2/v1/tokeninfo
+SCITRAN_AUTH_GOOGLE_AUTH_ENDPOINT=https://accounts.google.com/o/oauth2/auth
+SCITRAN_AUTH_GOOGLE_CLIENT_ID=
+SCITRAN_AUTH_GOOGLE_ID_ENDPOINT=https://www.googleapis.com/plus/v1/people/me/openIdConnect
+SCITRAN_AUTH_GOOGLE_VERIFY_ENDPOINT=https://www.googleapis.com/oauth2/v1/tokeninfo
 SCITRAN_PERSISTENT_DATA_PATH=/srv/bids-core/persistent/data
-SCITRAN_URL=http://nginx:80/api/
+SCITRAN_SITE_URL=http://nginx:80/api/
 
 # server ----------------------------------------------------------------------------------------
 
