--- a/config.env.example
+++ b/config.env.example
@@ -17,11 +17,11 @@ SCITRAN_SITE_URL=http://nginx:80/api/
 
 CRN_SERVER_URL=
 
-ORCID_AUTH_CLIENT_ID=
-ORCID_AUTH_CLIENT_SECRET=
-ORCID_AUTH_REDIRECT_URI=
-ORCID_URI=
-ORCID_API_URI=
+SCITRAN_ORCID_AUTH_CLIENT_ID=
+SCITRAN_ORCID_AUTH_CLIENT_SECRET=
+SCITRAN_ORCID_AUTH_REDIRECT_URI=
+SCITRAN_ORCID_URI=
+SCITRAN_ORCID_API_URI=
 
 CRN_SERVER_AGAVE_URL=https://api.tacc.utexas.edu/
 CRN_SERVER_AGAVE_USERNAME=
