185 fix bids core docker config variables (#270)
* Update the SciTran parameters to use the proper variable names.
* Fix all references to newly named scitran environment variables
* add a .prettierignore to stop lint from breaking webpack.* code
* Rename Orchid auth params so they match the naming schema in bids-core/config.py
* Fix webpack.common.js es2017 formatting issue for all working dirs.
* Fix some missing updates to server orcid vars.

--- a/config.env.example
+++ b/config.env.example
@@ -6,22 +6,22 @@
 SCITRAN_RUNTIME_PORT=8112
 SCITRAN_CORE_DRONE_SECRET=
 SCITRAN_PERSISTENT_DB_URI=mongodb://mongo:27017/scitran
-SCITRAN_AUTH_AUTH_ENDPOINT=https://accounts.google.com/o/oauth2/auth
-SCITRAN_AUTH_CLIENT_ID=
-SCITRAN_AUTH_ID_ENDPOINT=https://www.googleapis.com/plus/v1/people/me/openIdConnect
-SCITRAN_AUTH_VERIFY_ENDPOINT=https://www.googleapis.com/oauth2/v1/tokeninfo
+SCITRAN_AUTH_GOOGLE_AUTH_ENDPOINT=https://accounts.google.com/o/oauth2/auth
+SCITRAN_AUTH_GOOGLE_CLIENT_ID=
+SCITRAN_AUTH_GOOGLE_ID_ENDPOINT=https://www.googleapis.com/plus/v1/people/me/openIdConnect
+SCITRAN_AUTH_GOOGLE_VERIFY_ENDPOINT=https://www.googleapis.com/oauth2/v1/tokeninfo
 SCITRAN_PERSISTENT_DATA_PATH=/srv/bids-core/persistent/data
-SCITRAN_URL=http://nginx:80/api/
+SCITRAN_SITE_URL=http://nginx:80/api/
 
 # server ----------------------------------------------------------------------------------------
 
 CRN_SERVER_URL=
 
-ORCID_AUTH_CLIENT_ID=
-ORCID_AUTH_CLIENT_SECRET=
-ORCID_AUTH_REDIRECT_URI=
-ORCID_URI=
-ORCID_API_URI=
+SCITRAN_AUTH_ORCID_CLIENT_ID=
+SCITRAN_AUTH_ORCID_CLIENT_SECRET=
+SCITRAN_AUTH_ORCID_REDIRECT_URI=
+SCITRAN_AUTH_ORCID_URI=
+SCITRAN_AUTH_ORCID_API_ENDPOINT=
 
 CRN_SERVER_AGAVE_URL=https://api.tacc.utexas.edu/
 CRN_SERVER_AGAVE_USERNAME=
