--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -18,10 +18,11 @@
   },
   "plugins": ["react"],
   "rules": {
-    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "indent": 0,
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
-    "semi": ["error", "never"]
+    "semi": ["error", "never"],
+    "react/no-string-refs": 0
   },
   "settings": {
     "react": {
