--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "bids-validator": "^0.25.0",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
+    "create-react-class": "^15.6.2",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "immutability-helper": "^2.6.4",
     "load-google-api": "^0.1.3",
