--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "bytes": "^3.0.0",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "load-google-api": "^0.1.3",
+    "loadable-components": "^0.4.0",
     "moment": "^2.10.3",
     "pluralize": "^7.0.0",
     "prop-types": "^15.6.0",
@@ -52,6 +53,7 @@
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
