--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,7 @@
   "author": "Squishymedia",
   "dependencies": {
     "async": "^2.6.0",
-    "babel-polyfill": "^6.6.1",
+    "babel-runtime": "^6.26.0",
     "bids-validator": "^0.25.7",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
@@ -54,6 +54,7 @@
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
