--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CRN",
+  "name": "openneuro-app",
   "version": "1.6.1",
   "description": "React JS web frontend for the CRN application.",
   "license": "MIT",
