--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -7,7 +7,8 @@
   "globals": {
     "process": true,
     "__GIT_HASH__": true,
-    "__GIT_BRANCH__": true
+    "__GIT_BRANCH__": true,
+    "serviceWorkerOption": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parser": "babel-eslint",
