--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "react-table": "^6.7.6",
     "reflux": "6.4.1",
     "remarkable": "1.7.1",
+    "serviceworker-webpack-plugin": "^0.2.3",
     "spark-md5": "^3.0.0",
     "superagent": "^3.6.0",
     "url-search-params-polyfill": "^2.0.1",
