--- a/app/package.json
+++ b/app/package.json
@@ -45,7 +45,9 @@
     "spark-md5": "^3.0.0",
     "superagent": "^3.6.0",
     "url-search-params-polyfill": "^2.0.1",
-    "urlite": "^1.2.8"
+    "urlite": "^1.2.8",
+    "xmldoc": "^1.1.0",
+    "yazl": "^2.4.3"
   },
   "devDependencies": {
     "babel": "6.23.0",
