--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,9 @@
     "bids-validator": "^0.25.7",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
+    "downloadjs": "^1.4.7",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
+    "jszip": "^3.1.5",
     "load-google-api": "^0.1.3",
     "loadable-components": "^0.4.0",
     "moment": "^2.10.3",
@@ -46,8 +48,7 @@
     "superagent": "^3.6.0",
     "url-search-params-polyfill": "^2.0.1",
     "urlite": "^1.2.8",
-    "xmldoc": "^1.1.0",
-    "yazl": "^2.4.3"
+    "xmldoc": "^1.1.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
