--- a/app/package.json
+++ b/app/package.json
@@ -25,11 +25,14 @@
     "bids-validator": "^0.25.0",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
+    "draft-js": "^0.10.5",
+    "draft-js-prism": "^1.0.5",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "load-google-api": "^0.1.3",
     "loadable-components": "^0.4.0",
     "moment": "^2.10.3",
     "pluralize": "^7.0.0",
+    "prismjs": "^1.10.0",
     "prop-types": "^15.6.0",
     "raven-js": "^3.20.1",
     "react": "16",
