--- a/app/package.json
+++ b/app/package.json
@@ -45,6 +45,7 @@
     "remarkable": "1.7.1",
     "serviceworker-webpack-plugin": "^0.2.3",
     "spark-md5": "^3.0.0",
+    "stream-browserify": "^2.0.1",
     "superagent": "^3.6.0",
     "url-search-params-polyfill": "^2.0.1",
     "urlite": "^1.2.8",
