--- a/app/package.json
+++ b/app/package.json
@@ -79,6 +79,7 @@
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^22.0.0",
+    "jest-fetch-mock": "^1.4.1",
     "lint-staged": "^6.0.1",
     "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
