--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "bytes": "^3.0.0",
     "downloadjs": "^1.4.7",
     "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.2.0",
     "draft-js-prism": "^1.0.6",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "jszip": "^3.1.5",
