--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "bids-validator": "^0.25.7",
     "body-parser": "^1.14.0",
     "cron": "^1.1.0",
+    "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.2.0",
     "express": "^4.13.3",
     "express-fileupload": "^0.1.4",
     "git-rev-sync": "^1.9.1",
@@ -39,8 +41,7 @@
     "raven": "^2.2.1",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download":
-      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
@@ -68,7 +69,10 @@
   },
   "lint-staged": {
     "linters": {
-      "*.{js,jsx,json}": ["prettier --write", "git add"]
+      "*.{js,jsx,json}": [
+        "prettier --write",
+        "git add"
+      ]
     }
   }
 }
