--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,8 @@
     "node-resque": "^4.0.7",
     "nodemailer": "^2.5.0",
     "raven": "^2.2.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
     "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
