--- a/server/package.json
+++ b/server/package.json
@@ -45,11 +45,12 @@
     "request": "^2.83.0",
     "s3-stream-download":
       "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
-    "xmldoc": "^1.1.0",
     "victory": "^0.23.1",
+    "xmldoc": "^1.1.0",
     "yazl": "^2.4.3"
   },
   "devDependencies": {
