--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-server",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "",
   "license": "MIT",
   "main": "index.js",
@@ -43,7 +43,8 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download":
+      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
@@ -72,10 +73,7 @@
   },
   "lint-staged": {
     "linters": {
-      "*.{js,jsx,json}": [
-        "prettier --write",
-        "git add"
-      ]
+      "*.{js,jsx,json}": ["prettier --write", "git add"]
     }
   }
 }
