Move mongodb teardown to global teardown.

--- a/server/package.json
+++ b/server/package.json
@@ -72,7 +72,8 @@
       "!**/node_modules/**",
       "!**/vendor/**"
     ],
-    "globalSetup": "./jest-setup.js"
+    "globalSetup": "./jest-setup.js",
+    "globalTeardown": "./jest-teardown.js"
   },
   "lint-staged": {
     "linters": {
