--- a/server/package.json
+++ b/server/package.json
@@ -19,18 +19,22 @@
   "author": "Squishymedia",
   "dependencies": {
     "ajv": "4.9.0",
+    "apollo-server-express": "^1.3.2",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bids-validator": "^0.25.11",
-    "body-parser": "^1.14.0",
+    "body-parser": "^1.18.2",
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "express": "^4.13.3",
     "express-fileupload": "^0.1.4",
     "git-rev-sync": "^1.9.1",
+    "graphql": "^0.13.1",
+    "graphql-iso-date": "^3.5.0",
+    "graphql-tools": "^2.21.0",
     "ioredis": "^3.1.1",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
