--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "author": "Squishymedia",
   "dependencies": {
     "ajv": "4.9.0",
+    "apollo-client-preset": "^1.0.8",
     "apollo-server-express": "^1.3.2",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
@@ -34,6 +35,7 @@
     "git-rev-sync": "^1.9.1",
     "graphql": "^0.13.1",
     "graphql-iso-date": "^3.5.0",
+    "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
     "ioredis": "^3.1.1",
     "juice": "^2.0.0",
