--- a/server/package.json
+++ b/server/package.json
@@ -73,6 +73,7 @@
     "supertest": "^3.0.0"
   },
   "jest": {
+    "testEnvironment": "node",
     "collectCoverageFrom": [
       "**/*.js",
       "!**/*.spec.js",
