--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.14.1",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
+    "node-fetch": "^2.0.0",
     "node-resque": "^4.0.7",
     "nodemailer": "^2.5.0",
     "raven": "^2.2.1",
