--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,7 @@
     "ioredis": "^3.1.1",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
-    "mongodb": "^2.0.46",
+    "mongodb": "^2.2.34",
     "morgan": "^1.6.1",
     "node-fetch": "^2.0.0",
     "node-resque": "^4.0.7",
@@ -61,6 +61,7 @@
     "yazl": "^2.4.3"
   },
   "devDependencies": {
+    "apollo-link-schema": "^1.0.6",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
     "babel-preset-env": "^1.6.0",
