--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
     "ioredis": "^3.1.1",
+    "jsdom": "^11.6.2",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
     "mongodb": "^2.2.34",
@@ -50,8 +51,7 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download":
-      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
@@ -85,7 +85,10 @@
   },
   "lint-staged": {
     "linters": {
-      "*.{js,jsx,json}": ["prettier --write", "git add"]
+      "*.{js,jsx,json}": [
+        "prettier --write",
+        "git add"
+      ]
     }
   }
 }
