--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "apollo-server-express": "^1.3.2",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bids-validator": "^0.26.0",
