Use yarn and workspaces for lerna integration.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "dependencies": {
+  "private": true,
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "test": "lerna run test",
+    "prepare": "lerna run prepare"
+  },
+  "devDependencies": {
     "lerna": "^2.9.1"
-  }
+  },
+  "workspaces": ["packages/*"]
 }
