Fix snapshotSerializers configuration for lerna package layout.

--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -103,7 +103,7 @@
   },
   "jest": {
     "setupFiles": ["./jestsetup.js"],
-    "snapshotSerializers": ["<rootDir>/node_modules/enzyme-to-json/serializer"],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
         "<rootDir>/__mocks__/fileMock.js",
