Fix docker-compose paths for new images.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,7 +33,7 @@ services:
     volumes:
       - ./packages/openneuro-server:/srv
       - yarn_cache:/root/.cache
-      - ./server/client.config.js:/srv/client.config.js:rw
+      - ./client.config.js:/client.config.js:rw
       - ${PERSISTENT_DIR}/bids-core/persistent/data:/srv/bids-core/persistent/data
       - ${PERSISTENT_DIR}/crn-server/persistent:/srv/persistent
     tmpfs:
