--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "bootstrap": "lerna bootstrap",
     "test": "lerna run test",
     "prepare": "lerna run prepare",
+    "lint": "eslint --cache --ext .jsx --ext .js packages/",
     "precommit": "lint-staged"
   },
   "devDependencies": {
+    "babel-eslint": "8.2.2",
+    "eslint": "4.19.1",
+    "eslint-plugin-react": "^7.7.0",
+    "husky": "^0.14.3",
     "lerna": "^2.9.1",
     "lint-staged": "^6.0.1",
-    "husky": "^0.14.3",
     "prettier": "^1.7.0"
   },
   "workspaces": ["packages/*"],
