--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "test": "jest --projects packages/*",
     "coverage": "jest --projects packages/* --coverage",
     "codecov": "lerna run codecov",
-    "prepare": "lerna run prepare",
     "lint": "eslint --cache --ext .jsx --ext .js packages/"
   },
   "devDependencies": {
@@ -13,6 +12,7 @@
     "eslint": "4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.15.0-rc.13",
+    "jest": "^22.4.3",
     "lerna": "^2.9.1",
     "lint-staged": "^6.0.1",
     "prettier": "^1.7.0"
