--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "checkJs": true,
     "allowJs": true,
     "outDir": "./built",
-    "target": "es6"
+    "target": "es6",
+    "jsx": "preserve"
   },
   "include": ["./packages/**/*"]
 }
