--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "bootstrap": "lerna bootstrap",
     "test": "jest",
     "coverage": "jest --coverage",
-    "codecov": "lerna run codecov",
+    "codecov": "codecov",
     "lint": "eslint --cache --ext .jsx --ext .js packages/"
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
+    "codecov": "^3.0.0",
     "eslint": "4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.15.0-rc.13",
