Add coverage configuration to top level jest.
Coverage is reported from the main process and needs to be
configured there to work.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     }
   },
   "jest": {
-    "projects": ["packages/*"]
+    "projects": ["packages/*"],
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/*.spec.js",
+      "!**/node_modules/**",
+      "!**/vendor/**"
+    ]
   }
 }
