CLI: Add a configuration library for ~/.openneuro configs.

--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "commander": "^2.15.1",
     "esm": "^3.0.16",
+    "home-config": "^0.1.0",
     "inquirer": "^5.2.0",
     "openneuro-client": "^1.10.0"
   },
