CLI: Add some config handling.

--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "commander": "^2.15.1",
     "esm": "^3.0.16",
-    "home-config": "^0.1.0",
+    "find-config": "^1.0.0",
     "inquirer": "^5.2.0",
     "openneuro-client": "^1.10.0"
   },
@@ -24,5 +24,8 @@
       "!**/node_modules/**",
       "!**/vendor/**"
     ]
+  },
+  "devDependencies": {
+    "metro-memory-fs": "^0.31.0"
   }
 }
