--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -7,6 +7,10 @@
   "author": "Squishymedia",
   "license": "MIT",
   "dependencies": {
-    "apollo-boost": "^0.1.4"
+    "apollo-boost": "^0.1.4",
+    "apollo-link": "^1.2.1",
+    "apollo-upload-client": "^8.0.0",
+    "esm": "^3.0.16",
+    "graphql": "^0.13.2"
   }
 }
