--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -18,6 +18,7 @@
     "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
     "apollo-server-express": "^1.3.2",
+    "apollo-upload-server": "^5.0.0",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
     "babel-core": "^6.26.0",
@@ -29,10 +30,11 @@
     "draft-js-export-html": "^1.2.0",
     "express": "^4.13.3",
     "express-fileupload": "^0.1.4",
-    "graphql": "^0.13.1",
+    "graphql": "^0.13.2",
     "graphql-iso-date": "^3.5.0",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
+    "immutable": "^3.8.2",
     "ioredis": "^3.1.1",
     "jsdom": "^11.6.2",
     "juice": "^2.0.0",
