--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -11,6 +11,7 @@
     "esm": "^3.0.16",
     "find-config": "^1.0.0",
     "inquirer": "^5.2.0",
+    "mkdirp": "^0.5.1",
     "openneuro-client": "^1.10.0"
   },
   "scripts": {
