update config example with doi enviroment variables

--- a/config.env.example
+++ b/config.env.example
@@ -48,6 +48,13 @@ AWS_BATCH_COMPUTE_ENVIRONMENT=
 
 GOOGLE_TRACKING_ID=
 
+DOI_USERNAME=
+DOI_PASSWORD=
+DOI_PREFIX=
+DOI_URL=
+
+
+
 # both ----------------------------------------------------------------------------------------
 
 SENTRY_DSN=
