--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -50,6 +50,10 @@ services:
     tmpfs:
       - /srv/node_modules:exec
 
+  datalad:
+    volumes:
+      - ../datalad-service:/srv
+
   # nginx - static file serving and service proxy
   nginx:
     volumes:
