--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,46 @@
 appdirs==1.4.3
 asn1crypto==0.24.0
 attrs==17.4.0
-autopep8==1.3.4
 boto==2.48.0
 certifi==2018.1.18
-cffi==1.11.4
+cffi==1.11.5
 chardet==3.0.4
-coverage==4.5
-cryptography==2.1.4
-datalad==0.9.1
-decorator==4.2.1
+citeproc-py==0.4.0
+cryptography==2.2.2
+datalad==0.9.3
+duecredit==0.6.3
+entrypoints==0.2.3
 falcon==1.4.1
+fasteners==0.14.1
 gitdb2==2.0.3
-GitPython==2.1.8
+GitPython==2.1.9
 gunicorn==19.7.1
-httpie==0.9.9
 humanize==0.5.1
 idna==2.6
-ipython==6.2.1
-ipython-genutils==0.2.0
 iso8601==0.1.12
-jedi==0.11.1
 jsmin==2.2.2
-keyring==11.0.0
-keyrings.alt==2.3
+keyring==12.0.1
+keyrings.alt==3.0
+lxml==4.2.1
 mock==2.0.0
-msgpack-python==0.5.2
-parso==0.1.1
+monotonic==1.4
+more-itertools==4.1.0
+msgpack==0.5.6
 patool==1.12
-pbr==3.1.1
-pexpect==4.3.1
-pickleshare==0.7.4
+pbr==4.0.2
 pluggy==0.6.0
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-py==1.5.2
-pycodestyle==2.3.1
+py==1.5.3
 pycparser==2.18
-PyGithub==1.35
-Pygments==2.2.0
-PyJWT==1.5.3
-PyLD==0.8.2
-pytest==3.4.0
-pytest-cov==2.5.1
-pytest-sugar==0.9.1
+PyGithub==1.39
+PyJWT==1.6.1
+PyLD==1.0.3
+pytest==3.5.0
 python-mimeparse==1.6.0
 requests==2.18.4
 SecretStorage==2.3.1
-simplegeneric==0.8.1
 simplejson==3.13.2
 six==1.11.0
 smmap2==2.0.3
-termcolor==1.1.0
-tqdm==4.19.5
-traitlets==4.3.2
+tqdm==4.23.0
 urllib3==1.22
-wcwidth==0.1.7
 wrapt==1.10.11
