--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "apollo-boost": "^0.1.4",
     "apollo-link": "^1.2.1",
-    "apollo-upload-client": "^8.0.0",
+    "apollo-upload-client":
+      "https://github.com/danielmeneses/apollo-upload-client.git",
     "esm": "^3.0.16",
+    "form-data": "^2.3.2",
     "graphql": "^0.13.2",
     "node-fetch": "^2.1.2"
   },
