CLI: Show a percentage for each file being uploaded.

--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -13,7 +13,8 @@
     "find-config": "^1.0.0",
     "inquirer": "^5.2.0",
     "mkdirp": "^0.5.1",
-    "openneuro-client": "^1.10.0"
+    "openneuro-client": "^1.10.0",
+    "progress-stream": "^2.0.0"
   },
   "scripts": {
     "openneuro": "node src/index.js"
