--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,6 +45,7 @@ server {
 
     # crn-server proxy
     location /crn {
+        client_max_body_size 0;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_pass http://server:8111;
