--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -26,6 +26,9 @@ server {
 
     # crn-server proxy
     location /crn {
+        client_max_body_size 0;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_pass http://server:8111;
     }
 
