--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,6 +48,9 @@ server {
         client_max_body_size 0;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
         proxy_pass http://server:8111;
     }
 
