--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -29,15 +29,18 @@ server {
         client_max_body_size 0;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
         proxy_pass http://server:8111;
     }
 
     # crn-web app
     root /srv/app/dist;
     location / {
-    	proxy_pass http://app:9876;
-	proxy_http_version 1.1;
-    	proxy_set_header Upgrade $http_upgrade;
-    	proxy_set_header Connection "upgrade";
+        proxy_pass http://app:9876;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
