--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-client",
-  "version": "1.10.0",
+  "version": "1.12.0",
   "description": "OpenNeuro shared client library.",
   "main": "src/index.js",
   "repository": "git@github.com:OpenNeuroOrg/openneuro.git",
@@ -9,8 +9,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.4",
     "apollo-link": "^1.2.1",
-    "apollo-upload-client":
-      "https://github.com/danielmeneses/apollo-upload-client.git",
+    "apollo-upload-client": "https://github.com/danielmeneses/apollo-upload-client.git",
     "esm": "^3.0.16",
     "form-data": "^2.3.2",
     "graphql": "^0.13.2",
