--- a/packages/openneuro-app/Dockerfile
+++ b/packages/openneuro-app/Dockerfile
@@ -5,9 +5,9 @@ RUN apk --no-cache --update add git
 ADD . /srv
 
 # setup app directory
-WORKDIR /srv
+WORKDIR /srv/packages/openneuro-app
 
 # Build the frontend
-RUN npm install -g yarn && yarn install --pure-lockfile
+RUN npm install -g yarn && yarn install --pure-lockfile && yarn bootstrap
 
 CMD yarn build
