--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,12 +10,14 @@ services:
   # web app bundle build
   app:
     build:
-      context: ./packages/openneuro-app
-    command: sh -c "yarn install --pure-lockfile && yarn start --watch --watch-poll ${WEBPACK_POLL_INTERVAL}"
+      context: .
+      dockerfile: ./packages/openneuro-app/Dockerfile
+    working_dir: /srv/packages/openneuro-app
+    command: sh -c "yarn install && yarn start --watch"
     volumes:
-      - ./packages/openneuro-app:/srv
+      - .:/srv
       - yarn_cache:/root/.cache
-      - project:/srv/dist
+      - project:/srv/packages/openneuro-app/dist
     tmpfs:
       - /srv/node_modules:exec
 
