--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker build --pull -t openneuro/server packages/openneuro-server
-      - docker build --pull -t openneuro/app packages/openneuro-app
+      - docker build --pull -t openneuro/app -f packages/openneuro-app/Dockerfile .
       # Update latest tag
       - docker tag -f openneuro/server openneuro/server:latest
       - docker tag -f openneuro/app openneuro/app:latest
@@ -40,7 +40,7 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker build --pull -t openneuro/server packages/openneuro-server
-      - docker build --pull -t openneuro/app packages/openneuro-app
+      - docker build --pull -t openneuro/app -f packages/openneuro-app/Dockerfile .
       # Update latest tag
       - docker tag -f openneuro/server openneuro/server:$CIRCLE_BRANCH
       - docker tag -f openneuro/app openneuro/app:$CIRCLE_BRANCH
@@ -51,7 +51,7 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker build --pull -t openneuro/server packages/openneuro-server
-      - docker build --pull -t openneuro/app packages/openneuro-app
+      - docker build --pull -t openneuro/app -f packages/openneuro-app/Dockerfile .
       - docker tag openneuro/server openneuro/server:$CIRCLE_TAG
       - docker tag openneuro/app openneuro/app:$CIRCLE_TAG
       - docker push openneuro/server:$CIRCLE_TAG
