--- a/packages/openneuro-app/Dockerfile
+++ b/packages/openneuro-app/Dockerfile
@@ -5,9 +5,11 @@ RUN apk --no-cache --update add git
 ADD . /srv
 
 # setup app directory
-WORKDIR /srv/packages/openneuro-app
+WORKDIR /srv
 
 # Build the frontend
 RUN npm install -g yarn && yarn install --pure-lockfile && yarn bootstrap
+
+WORKDIR /srv/packages/openneuro-app
 
 CMD yarn build
