App: Add a configuration option to enable or disable DataLad.

--- a/config.env.example
+++ b/config.env.example
@@ -16,6 +16,7 @@ SCITRAN_SITE_URL=http://nginx:80/api/
 # server ----------------------------------------------------------------------------------------
 
 CRN_SERVER_URL=
+CRN_SERVER_DATALAD=true
 
 SCITRAN_AUTH_ORCID_CLIENT_ID=
 SCITRAN_AUTH_ORCID_CLIENT_SECRET=
