Add missing node_modules caches for docker-compose.dev.yml

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,6 +21,9 @@ services:
     tmpfs:
       - /srv/node_modules:exec
       - /srv/packages/openneuro-app/node_modules:exec
+      - /srv/packages/openneuro-client/node_modules:exec
+      - /srv/packages/openneuro-cli/node_modules:exec
+      - /srv/packages/openneuro-server/node_modules:exec
 
   # crn core (bids-core)
   core:
