--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.6.0",
     "raven-js": "^3.20.1",
     "react": "16",
+    "react-apollo": "^2.1.3",
     "react-bootstrap": "0.31.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16",
