Fix missing dev deps for bcrypt library.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,7 +29,7 @@ services:
   server:
     build:
       context: ./packages/openneuro-server
-    command: sh -c "yarn install && node /srv/index.js"
+    command: sh -c "apk add make gcc g++ python && yarn install && node /srv/index.js"
     volumes:
       - ./packages/openneuro-server:/srv
       - yarn_cache:/root/.cache
@@ -41,7 +41,7 @@ services:
   worker:
     build:
       context: ./packages/openneuro-server
-    command: sh -c "yarn install  && node /srv/worker.js"
+    command: sh -c "apk add make gcc g++ python && yarn install  && node /srv/worker.js"
     volumes:
       - ./packages/openneuro-server:/srv
       - yarn_cache:/root/.cache
