--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "2.50.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "base64url": "^2.0.0",
     "bcrypt": "^2.0.1",
     "bids-validator": "^0.26.2",
     "body-parser": "^1.18.2",
