docker files updated for celery container

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,7 +60,7 @@ services:
   celery:
     volumes:
       - ../datalad-service/datalad_service:/datalad_service
-    command: sh -c "celery worker -A datalad_service.s3 -l info -c 5"
+      - ../datalad-service/tests:/tests
     
   # nginx - static file serving and service proxy
   nginx:
