--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:OpenNeuroOrg/openneuro.git",
   "author": "Squishymedia",
   "license": "MIT",
+  "bin": {
+    "openneuro": "./src/index.js"
+  },
   "dependencies": {
     "bids-validator": "^0.26.2",
     "commander": "^2.15.1",
