Fix bcrypt build bug in openneuro-app.

--- a/packages/openneuro-app/Dockerfile
+++ b/packages/openneuro-app/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:8.9.4-alpine
 
-RUN apk --no-cache --update add git
+RUN apk --no-cache --update add git make gcc g++ python
 
 ADD . /srv
 
@@ -8,7 +8,7 @@ ADD . /srv
 WORKDIR /srv
 
 # Build the frontend
-RUN npm install -g yarn && yarn install --pure-lockfile && yarn bootstrap
+RUN npm install -g yarn && yarn install --pure-lockfile && yarn bootstrap && apk del make gcc g++ python
 
 WORKDIR /srv/packages/openneuro-app
 
