--- a/circle.yml
+++ b/circle.yml
@@ -42,8 +42,8 @@ deployment:
       - docker build --pull -t openneuro/server packages/openneuro-server
       - docker build --pull -t openneuro/app -f packages/openneuro-app/Dockerfile .
       # Update latest tag
-      - docker tag -f openneuro/server openneuro/server:$CIRCLE_BRANCH
-      - docker tag -f openneuro/app openneuro/app:$CIRCLE_BRANCH
+      - docker tag -f openneuro/server openneuro/server:${CIRCLE_BRANCH///}
+      - docker tag -f openneuro/app openneuro/app:${CIRCLE_BRANCH///}
       - if [[ -n "$DOCKER_PASS" ]]; then docker push openneuro/server:${CIRCLE_BRANCH///}; fi
       - if [[ -n "$DOCKER_PASS" ]]; then docker push openneuro/app:${CIRCLE_BRANCH///}; fi
   production:
