Only build latest tag on master branch.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,3 +50,6 @@ workflows:
       - deploy:
           requires: 
             - test
+          filters:
+            branches:
+              only: master
