Use correct websocket URLs and add nginx passthrough in dev config.

--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -35,6 +35,14 @@ server {
         proxy_pass http://server:8111;
     }
 
+    location /graphql-subscriptions {
+        proxy_pass http://server:8111/graphql-subscriptions;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+	proxy_set_header Host $host;
+    }
+
     # crn-web app
     root /srv/app/dist;
     location / {
