add ENABLE_ANALYSIS flag in config.env.example

--- a/config.env.example
+++ b/config.env.example
@@ -48,3 +48,6 @@ DOI_URL=
 SENTRY_DSN=
 ENVIRONMENT=
 
+# client -----------------------------------------------------------------------
+
+ENABLE_ANALYSIS=true
