more clear name of analysis flag

--- a/config.env.example
+++ b/config.env.example
@@ -50,4 +50,4 @@ ENVIRONMENT=
 
 # client -----------------------------------------------------------------------
 
-ENABLE_ANALYSIS=true
+ANALYSIS_ENABLED=true
